<resources>
  <string name="app_name">pupai</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>

  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="main_info">Selected Image:</string>
  <string name="submit">Submit</string>
  <string name="main_alt">Image preview</string>
  <string name="picture_bt">Take picture</string>
  <string name="gallery_bt">Browse</string>
  <string name="logout">Log out</string>
  <string name="signup">Register</string>
  <string name="api_token">token</string>
</resources>
