<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"

                android:contentDescription="@string/main_alt"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="takePicture"
                android:text="@string/picture_bt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="browseGallery"
                android:text="@string/gallery_bt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/bt_submit_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="16dp"
                        android:clickable="false"
                        android:onClick="submit"
                        android:text="Tell me what breed it is!"
                        android:visibility="invisible" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
